# anki-deck-generator

./: .gitignore  README.md  Spanisch_Pareto_System.apkg  main.py  pyproject.toml
apps/generator-app/: config.yaml  pyproject.toml
apps/generator-app/configs/: config.yaml  config_de.yaml
apps/generator-app/data/spanish/01_pareto_sentences/: 02_genitiv_besitzanzeige.txt  03_doppelte_pronomen_und_dativ_signal.txt  04_plural_dativ_und_plural_akkusativ.txt  05_feste_pronomenkette_und_mutation.txt  06_weibliches_akkusativ_pronomen.txt  08_pluralbildung.txt  10_dativ_klarstellung.txt  12_starrheit_der_negation.txt  13_gerundium_verlaufsform.txt  14_praeteritum_indefinido.txt  15_das_imperfekt.txt  16_das_zweite_sein_estar.txt  17_subjunktiv_subjuntivo.txt  18_hoeflichkeit_usted.txt  19_gefallen_statt_moegen_gustar.txt  20_das_persoenliche_a_bei_personen.txt  21_reflexive_verben_sich_formen.txt  22_das_passiv_ersatz_se.txt  23_por_vs_para_grund_vs_zweck.txt  24_perfekt_vergangenheit_mit_bezug.txt  25_doppelte_verneinung.txt  26_neutrales_lo.txt  27_relativsatz_allrounder.txt  28_komparativ.txt  29_konditional.txt  30_praepositionalpronomen_con_verschmelzung.txt
apps/generator-app/data/spanish/02_context_islands/: 02_social_and_family.txt  03_time_and_planning.txt  04_gastro.txt  05_work.txt  07_haus_stadt_natur.txt
apps/generator-app/src/generator_app/: app.py  config.py  constants.py  models.py
apps/generator-app/templates/: cloze_card.css  cloze_card_afmt.html
apps/generator-app/tests/: test_audio.py  test_config.py
(+28 files in other folders)
