# anki-deck-generator/apps/generator-app
[project]
name = "generator-app"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "genanki>=0.13.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
start-app = "generator_app.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
